Also localize custom strings.

--- a/scripts/windows/msi/iridium.wxs
+++ b/scripts/windows/msi/iridium.wxs
@@ -11,7 +11,7 @@
         <Package
             Id="*"
             Keywords="Installer"
-            Description="Iridium Secure Browser $(var.Version) Installer"
+            Description="Iridium Browser $(var.Version) Installer"
             Manufacturer="The Iridium Authors"
             InstallerVersion="100"
             Languages="1033,1031"
@@ -20,22 +20,24 @@
             InstallPrivileges="limited"
             SummaryCodepage="1252" />
 
+        <Property Id="Iridium_Version" Value="$(var.Version)" />
+
         <Property Id="MSIINSTALLPERUSER" Value="1" />
         <Property Id="ALLUSERS" Value="2" />
 
         <MajorUpgrade
-            DowngradeErrorMessage="A later version of [ProductName] is already installed. Setup will now exit." />
+            DowngradeErrorMessage="!(loc.Iridium_DowngradeErrorMessage)" />
 
         <Media Id="1" Cabinet="iridiumbrowser.cab" EmbedCab="yes" />
-        <Property Id="DiskPrompt" Value="Iridium Browser $(var.Version) Installation [1]" />
+        <Property Id="DiskPrompt" Value="!(loc.Iridium_DiskPrompt)" />
 
         <Directory Id="TARGETDIR" Name="SourceDir">
             <Directory Id="ProgramFilesFolder" Name="PFiles">
-                <Directory Id="INSTALLDIR" Name="Iridium">
+                <Directory Id="INSTALLDIR" Name="!(loc.Iridium_InstallFolder)">
                 </Directory>
             </Directory>
             <Directory Id="ProgramMenuFolder">
-                <Directory Id="ApplicationProgramsFolder" Name="Iridium Browser"/>
+                <Directory Id="ApplicationProgramsFolder" Name="!(loc.Iridium_MenuFolder)"/>
             </Directory>
         </Directory>
 
@@ -45,8 +47,8 @@
                     <Shortcut Id="ApplicationStartMenuShortcut"
                               Directory="ApplicationProgramsFolder"
                               Advertise="yes"
-                              Name="Iridium Browser $(var.Version)"
-                              Description="Start Iridium Secure Browser $(var.Version)"
+                              Name="!(loc.Iridium_ShortcutName)"
+                              Description="!(loc.Iridium_ShortcutDescription)"
                               WorkingDirectory="INSTALLDIR"
                               Icon="Icon.exe">
                         <Icon Id="Icon.exe" SourceFile="$(var.SourceRoot)\chrome.exe" />
@@ -59,17 +61,17 @@
         <DirectoryRef Id="ApplicationProgramsFolder">
             <Component Id="ApplicationShortcut" Guid="15104278-29FC-46C7-855F-84A46DF64158">
                 <Shortcut Id="UninstallProduct"
-                          Name="Uninstall Iridium Browser"
-                          Description="Uninstalls Iridium Secure Browser"
+                          Name="!(loc.Iridium_UninstallName)"
+                          Description="!(loc.Iridium_UninstallDescription)"
                           Target="[System64Folder]msiexec.exe"
                           Arguments="/x [ProductCode]"/>
                 <RemoveFolder Id="ApplicationProgramsFolder" On="uninstall"/>
                 <RegistryValue Root="HKCU" Key="Software\Microsoft\Iridium Browser" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-           </Component>
+            </Component>
         </DirectoryRef>
 
-        <Feature Id="Complete" Title="Iridium $(var.Version)" Description="The complete package." Display="expand" Level="1" AllowAdvertise="yes" ConfigurableDirectory="INSTALLDIR">
-            <Feature Id="IridiumApp" Title="Program" Description="The main executable." Level="1">
+        <Feature Id="Complete" Title="!(loc.Iridium_FeatureTitle)" Description="!(loc.Iridium_FeatureDescription)" Display="expand" Level="1" AllowAdvertise="yes" ConfigurableDirectory="INSTALLDIR">
+            <Feature Id="IridiumApp" Title="!(loc.Iridium_FeatureIridiumTitle)" Description="!(loc.Iridium_FeatureIridiumDescription)" Level="1">
                 <ComponentGroupRef Id="IridiumFiles" />
                 <ComponentRef Id="iridium.exe" />
                 <ComponentRef Id="ApplicationShortcut" />
@@ -80,7 +82,7 @@
 
         <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
 
-        <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Launch Iridium Browser" />
+        <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="!(loc.Iridium_LaunchIridium)" />
         <Property Id="WixShellExecTarget" Value="[#iridium.exe]" />
         <CustomAction Id="LaunchApplication" BinaryKey="WixCA" DllEntry="WixShellExec" Impersonate="yes" />
 
