--- a/scripts/windows/msi/iridium.wxs
+++ b/scripts/windows/msi/iridium.wxs
@@ -26,7 +26,7 @@
         <Property Id="ALLUSERS" Value="2" />
 
         <MajorUpgrade
-            DowngradeErrorMessage="!(loc.Iridium_DowngradeErrorMessage)" />
+            AllowDowngrades="yes" />
 
         <Media Id="1" Cabinet="iridiumbrowser.cab" EmbedCab="yes" />
         <Property Id="DiskPrompt" Value="!(loc.Iridium_DiskPrompt)" />
